--- a/renrendian/miniprogram/pages/goods/detail.wxss
+++ b/renrendian/miniprogram/pages/goods/detail.wxss
@@ -82,3 +82,45 @@ page {
   margin: 3px;
   color: black;
 }
+
+.page__hd{
+  background-color:white;
+  height:50px;
+  width:100%;
+  position:fixed;
+  bottom:0;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  font-size: 11pt;
+}
+
+.col0{
+  display: flex;
+  flex-direction: column;
+  justify-content:center;
+  margin-right: 35rpx;
+}
+
+.col0 image{
+  width: 28px;
+}
+
+.row0{
+  display: flex;
+  flex-direction: row;
+  justify-content:center;
+}
+
+.rad0{
+  border-radius: 10px;
+  background-color: red;
+  margin-right: 6px;
+  padding: 3px 12px;
+  margin-top: 12px;
+  margin-bottom:12px;
+  font-size:11pt;
+  color: white;
+  
+  
+}
