--- a/renrendian/miniprogram/pages/goods/detail.wxss
+++ b/renrendian/miniprogram/pages/goods/detail.wxss
@@ -110,17 +110,44 @@ page {
   display: flex;
   flex-direction: row;
   justify-content:center;
+  align-items: center;
+}
+
+.rowdppj{
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content:space-between;
+  align-items: center;
+  
 }
 
 .rad0{
-  border-radius: 10px;
+  border-top-left-radius: 10px;
+  border-bottom-left-radius: 10px;
   background-color: red;
-  margin-right: 6px;
-  padding: 3px 12px;
-  margin-top: 12px;
-  margin-bottom:12px;
+  
+  padding: 3px 20px;
+  margin-top: 6px;
+  margin-bottom:6px;
   font-size:11pt;
   color: white;
-  
-  
+  display: flex; 
+  justify-content: center;
+  align-items: center;
+}
+
+.rad1{
+  border-top-right-radius: 10px;
+  border-bottom-right-radius: 10px;
+  background-color: red;
+  margin-right: 6px;
+  padding: 3px 20px;
+  margin-top: 6px;
+  margin-bottom:6px;
+  font-size:11pt;
+  color: white;
+  display: flex; 
+  justify-content: center;
+  align-items: center;  
 }
