--- a/renrendian/miniprogram/pages/index/index.wxml
+++ b/renrendian/miniprogram/pages/index/index.wxml
@@ -42,9 +42,9 @@
 
     <view class="hotgoods">
       <block wx:for='{{discountlist}}' wx:key='_id'>
-        <view class="hotgoodsitem">
+        <view bindtap='goodsitemtap' data-aduri='{{item._id}}'  class="hotgoodsitem">
           <view style="font-size:9pt;margin-left:4px;margin-right:2px;">
-            <image style="width:100%;" src="cloud://renrendian-749a2d.7265-renrendian-749a2d/miniapp_images/xihu.png" mode="widthFix"></image>
+            <image style="width:100%;" src="cloud://subrac-89aa62.7375-subrac-89aa62/{{item.logo}}" mode="widthFix"></image>
             <view>
             {{item.text}}
             </view>
@@ -76,6 +76,23 @@
     </view>
 
     <view class="hotgoods">
+      <block wx:for='{{hotlist}}' wx:key='_id'>
+        <view bindtap='goodsitemtap' data-aduri='{{item._id}}'  class="hotgoodsitem">
+          <view style="font-size:9pt;margin-left:4px;margin-right:2px;">
+            <image style="width:100%;" src="cloud://subrac-89aa62.7375-subrac-89aa62/{{item.logo}}" mode="widthFix"></image>
+            <view>
+            {{item.text}}
+            </view>
+            <view class="cols">
+              <view>加购</view>
+              <text class="font7">300人购买</text>
+            
+            </view>
+          </view>
+        </view>
+      </block>
+
+    <!--
       <view class="hotgoodsitem">
         <view style="font-size:9pt;margin-left:4px;margin-right:2px;">
           <image style="width:100%;" src="cloud://renrendian-749a2d.7265-renrendian-749a2d/miniapp_images/xihu.png" mode="widthFix"></image>
@@ -102,6 +119,7 @@
           </view>   
         </view>    
       </view>    
+      -->
     </view>
   </view>
 
@@ -109,7 +127,7 @@
       <block wx:for='{{goodslist}}' wx:key='_id'>
         <view bindtap='goodsitemtap' data-aduri='{{item._id}}' class="rgoodsitem" style='margin-left:3px;margin-right:2px;'>
           <view style="font-size:9pt;">
-            <image class="image0" style="width:100%;" src='{{item.logo}}' mode="widthFix"></image>
+            <image class="image0" style="width:100%;" src='cloud://subrac-89aa62.7375-subrac-89aa62/{{item.logo}}' mode="widthFix"></image>
             <view class="rgoodsitemintro">
               <text>{{item.text}}</text>
               <text>{{item.text02}}</text>
