--- a/renrendian/miniprogram/pages/goods/detail.wxml
+++ b/renrendian/miniprogram/pages/goods/detail.wxml
@@ -29,9 +29,9 @@
 <view class="container">
   <view style="width:100vw;height:680rpx;">
     <swiper  class="swiper_ads" style="height:680rpx;" indicatorDots='{{indicatorDots}}' current='{{current}}' autoplay='{{autoplay1}}' interval='{{interval}}' duration='{{duration}}' circular='{{circular}}'>
-        <block wx:for='{{bannerUrls}}' wx:key='_id'>
+        <block wx:for='{{goods.detailbanners}}' wx:key='_id'>
           <swiper-item>
-            <image mode="widthFix" style="width:100%;"  data-aduri="{{item.goodsuuid}}" src="cloud://subrac-89aa62.7375-subrac-89aa62/{{item.imageuri}}" ></image>
+            <image mode="widthFix" style="width:100%;"  data-aduri="{{goods._id}}" src="cloud://subrac-89aa62.7375-subrac-89aa62/{{item}}" ></image>
           </swiper-item>
         </block>
     </swiper>    
