--- a/renrendian/miniprogram/pages/goods/detail.wxml
+++ b/renrendian/miniprogram/pages/goods/detail.wxml
@@ -74,9 +74,9 @@
   </view>
 
   <view class="d f9" style="margin-top:10px;">
-    <view class="d_price" style="margin-top:12px;margin-bottom:12px;">
+    <view class="d_price" style="margin-top:12px;margin-bottom:12px;" bindtap='stylesshow'>
       <view>
-        <text>规格</text><text style="margin-left:6px;color:black;">选择颜色·分类</text>
+        <text>规格</text><text style="margin-left:6px;color:black;">{{stylename}}</text>
       </view>
       <text style=""> > </text>
     </view>
@@ -155,17 +155,62 @@
 
 
 <view class="modal-box" hidden="{{flag}}" bindtap="hide">
-    <view class="modal-body">
-      <view class="modal-content">
-        <view class="col0" style="margin-top:6px;align-items:center;">
-          <text>本商品专享服务</text>
-          <text wx:if="{{goodsjifen > 0}}">购买可获得专享积分 <text>{{goodsjifen}}</text></text>
-          <text wx:if="{{fuwu > 0}}">正品保证·七天退换</text>
-        </view>
-        <button class="knowBtn" bindtap="hide">完成</button>
-     </view>
+  <view class="modal-body">
+    <view class="modal-content">
+      <view class="col0" style="margin-top:6px;align-items:center;">
+        <text>本商品专享服务</text>
+        <text wx:if="{{goodsjifen > 0}}">购买可获得专享积分 <text>{{goodsjifen}}</text></text>
+        <text wx:if="{{fuwu > 0}}">正品保证·七天退换</text>
+      </view>
+      <button class="knowBtn" bindtap="hide">完成</button>
     </view>
   </view>
+</view>
+
+<view class="modal-box" hidden="{{stylesflag}}" catchtouchmove='stopPageScroll'>
+  <view class="modal-body">
+    <view class="modal-content">
+      <view class="row0" style="margin-top:10px;margin-right:6px;justify-content:space-between;">
+        <view style="width:100%;padding:10px;">
+          <image mode="aspectFit" style="width:20%;"  data-aduri="{{goods._id}}" src="cloud://subrac-89aa62.7375-subrac-89aa62/{{goods.detailbanners[0]}}" ></image>
+        </view>
+        <view>
+          <icon type="clear" size='18px' bindtap="styleshide"></icon>
+        </view>
+      </view>
+      
+      <scroll-view scroll-y="true" style="background-color:red;height:50vh;margin-top:6px;">
+        <view style="height:60vh;">
+          111
+        </view>
+        <view style="height:60vh;">
+          222
+        </view>
+        <view style="height:60vh;">
+          333
+        </view>
+        <view style="height:60vh;">
+          444
+        </view>
+        <view style="height:60vh;">
+          555
+        </view>
+      </scroll-view>
+                  
+
+      <view>
+        <view class="row0" style='margin-right:8px;'>
+          <view class="rad0" style="background-color:orange;">
+            <text>加入购物车</text>
+          </view>
+          <view class="rad1">
+            <text>立即购买</text>
+          </view>
+        </view>      
+      </view>
+    </view>
+  </view>
+</view>
 
 <view style="height:60px;">
 </view>
