--- a/renrendian/miniprogram/pages/goods/reviews.wxml
+++ b/renrendian/miniprogram/pages/goods/reviews.wxml
@@ -1,35 +1,48 @@
 <!--miniprogram/pages/goods/reviews.wxml-->
 <view class="container">
-  <view class="d f9" style="margin-top:10px;">
+  <view class="d f9">
+    <!--
     <view class="d_price" style="margin-top:12px;margin-bottom:12px;" bindtap='tapreviews'>
       <view>
         <text>商品评价(5)</text>
       </view>
       <text style="color:red;">查看全部 > </text>
     </view>
-    <view class="d_price d_text  flex_start" style='margin-bottom:12px;'>
-      <view class="note">真心不错</view><view class="note">买的合算</view><view class="note">还会购买</view>
+    -->
+    <view class="d_price d_text  flex_start" style='margin-top:6px;'>
+      <view class="note">全部(125)</view><view class="note">最新</view><view class="note">追评</view><view class="note">有图</view><view class="note">视频</view>
     </view>
-
-    <view class="d_price" style="margin-top:12px;margin-bottom:12px;flex-direction: column;">
-      <view style='margin-bottom:6px;'>
+  </view>
+  <view class="d f9" style="margin-top:8px;">
+    <view class="d_price" style="margin-bottom:6px;flex-direction: column;">
+      <view style='margin-bottom:3px;'>
         <image src="../../images/vcd_icon.png" style='width:18px;' mode="widthFix"></image><text>我是**小白</text>
       </view>
+      <view style='margin-bottom:6px;'>
+        <text class="mr">2018-12-06</text><text class="mr">尺寸:XXL</text><text class="mr">颜色:红色</text>
+      </view>      
       <text >店家商品真心不错！多次购买的老客户了！送货上门，方便快捷！而且店家有是有促销活动！冲值100送10元，建议多关注店家小程序，抢充值优惠！ </text>
-    </view>
-
-    <view class="d_price" style="margin-top:20px;margin-bottom:12px;">
-      <view>
-        <text>打听打听(5)</text>
-      </view>
-      <text style="color:red;">查看全部 > </text>
-    </view>
-    <view class="d_price" style="margin-top:12px;margin-bottom:12px;">
-      <view style='margin-bottom:6px;'>
-        <image src="../../images/vcd_icon.png" style='width:18px;' mode="widthFix"></image><text>我是**小白</text>
-      </view>
-      <text >3个回答 </text>
+      <view class="lr" style=''>
+        <text class="mr">浏览(2156次)</text><text class="mr">有用(1258)</text>
+      </view>           
     </view>
 
   </view>
+
+  <view class="d f9" style="margin-top:8px;">
+    <view class="d_price" style="margin-top:6px;margin-bottom:6px;flex-direction: column;">
+      <view style='margin-bottom:3px;'>
+        <image src="../../images/vcd_icon.png" style='width:18px;' mode="widthFix"></image><text>我是**小白</text>
+      </view>
+      <view style='margin-bottom:6px;'>
+        <text class="mr">2018-12-06</text><text class="mr">尺寸:XXL</text><text class="mr">颜色:红色</text>
+      </view>      
+      <text >店家商品真心不错！多次购买的老客户了！送货上门，方便快捷！而且店家有是有促销活动！冲值100送10元，建议多关注店家小程序，抢充值优惠！ </text>
+      <view class="lr" style=''>
+        <text class="mr">浏览(2156次)</text><text class="mr">有用(1258)</text>
+      </view>           
+    </view>
+
+  </view>
+
 </view>
