--- a/renrendian/miniprogram/pages/goods/reviews.wxss
+++ b/renrendian/miniprogram/pages/goods/reviews.wxss
@@ -40,7 +40,6 @@ page {
 
 .f9{
   font-size:11pt;
-  color:gray;
 }
 
 .note{
@@ -49,4 +48,18 @@ page {
   padding: 3px 6px;
   margin: 3px;
   color: black;
+}
+
+.mr{
+  margin-right: 6px;
+  font-size:8pt;
+  color:gray;
+}
+
+.lr{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;  
+  margin-bottom:6px;
+  margin-top: 6px;
 }
