--- a/Pic98/src/Pic98/wwwroot/static/css/site.css
+++ b/Pic98/src/Pic98/wwwroot/static/css/site.css
@@ -182,3 +182,14 @@
             height: 200px;
         }
 		
+.topic_container{
+	text-align:center;
+	padding:8px;
+}
+
+.topic_container img{
+	width: auto;
+	height: auto;
+	max-width: 100%;
+	max-height: 100%;
+}
